--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <div class="container">
                     <h3 class="my-site__global-head-text"><span>My</span> Skills</h3>
                     <div class="row">
-                        <div class="col-12 col-md-6">
+                        <div class="col-12 col-md-6 mb-4">
                             <div class="my-site__skills-inner-wrap">
                                 <h5>Technical Skills</h5>
                                 <div class="my-site__skills">
@@ -192,7 +192,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-md-6">
+                        <div class="col-12 col-md-6 mb-4">
                             <div class="my-site__skills-inner-wrap">
                                 <h5>My Hobbies</h5>
                                 <p>My leisure time activities include Playing Cricket, Listening Music, Building Websites, Travelling etc.</p>
@@ -257,6 +257,38 @@
                     </div>
                 </div>
             </div>
+            <!-- Portfolio Section -->
+            <div class="my-site__portfolio-wrap" id="portfolio">
+                <div class="container">
+                    <h3 class="my-site__global-head-text">Port<span>folio</span></h3>
+                    <div class="row">
+                        <div class="col-12 col-md-6 mb-4">
+                            <a href="javascript:void(0);" class="portfolio__image-wrap">
+                                <img class="img-fluid" id="imageId" src="images/portfolio-images/sachinsuresh-resumesite-screenshot.jpg" alt="portfolio1" width="100%" height="450px" onclick="onClick(this);">
+                                <span>Click To View on Fullscreen</span>
+                            </a>
+                        </div>
+                        <div class="col-12 col-md-6 mb-4">
+                            <a href="javascript:void(0);" class="portfolio__image-wrap">
+                                <img class="img-fluid" id="imageId" src="images/portfolio-images/sachinsuresh-mainsite-screenshot.png" alt="portfolio2" width="100%" height="450px" onclick="onClick(this);">
+                                <span>Click To View on Fullscreen</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal gallery-image--modal" id="myModal" tabindex="-1" role="dialog" onclick="this.style.display='none'">
+                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <button type="button" class="close align-self-end" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <div class="modal-content">
+                            <div class="modal-body">
+                                <img class="img-fluid" id="img01">
+                            </div>
+                        </div>
+                    </div>
+                </div> 
+            </div>
         </div>
 
         <!-- Optional JavaScript -->
@@ -264,5 +296,12 @@
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
+        <script>
+            function onClick(element) {
+                document.getElementById("img01").src = element.src;
+                document.getElementById("myModal").style.display = "block";
+            }
+        </script>
     </body>
 </html>
