--- a/index.html
+++ b/index.html
@@ -289,6 +289,34 @@
                     </div>
                 </div> 
             </div>
+            <!-- Contact Section -->
+            <div class="my-site__contact-wrap" id="contact">
+                <div class="container">
+                    <h3 class="my-site__global-head-text">Contact<span>Me</span></h3>
+                    <div class="row text-left">
+                        <div class="col-12 col-md-6 mb-4">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3916.2869719008936!2d76.18019773003142!3d11.01708233970141!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTHCsDAxJzAxLjkiTiA3NsKwMTAnNTIuOSJF!5e0!3m2!1sen!2sin!4v1592280732354!5m2!1sen!2sin" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                        </div>
+                        <div class="col-12 col-md-6 mb-4">
+                            <form>
+                                <div class="form-group">
+                                    <label for="fullname">Full Name</label>
+                                    <input type="text" class="form-control" id="fullname">
+                                </div>
+                                <div class="form-group">
+                                    <label for="exampleInputEmail1">Email address</label>
+                                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">                                    
+                                </div>
+                                <div class="form-group">
+                                    <label for="message">Message</label>
+                                    <textarea class="form-control" id="message" rows="3" placeholder="Message"></textarea>
+                                </div>
+                                <button type="submit" class="btn btn-danger">Submit</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Optional JavaScript -->
