Changes Made for an Interview(ECESIS)

--- a/index.html
+++ b/index.html
@@ -14,14 +14,18 @@
     <body>
         <div class="global-wrap">
             <div class="my-site__top-wrap">
-                <div class="container">
+                <div class="container-fluid">
                     <nav class="navbar navbar-expand-lg">
                         <a class="navbar-brand" href="#">Sachin Suresh</a>
-                        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                            <img src="images/menu-icon.svg" width="28px" height="28px">
+                        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 105" width="25px" height="25px">
+                                <path fill="#dd4343" d="M63.2,20.7H17.3c-2.1,0-3.8-1.7-3.8-3.8v0c0-2.1,1.7-3.8,3.8-3.8h45.9c2.1,0,3.8,1.7,3.8,3.8v0C67,19,65.3,20.7,63.2,20.7z"/>
+                                <path fill="#dd4343" d="M83,53.7H17.3c-2.1,0-3.8-1.7-3.8-3.8v0c0-2.1,1.7-3.8,3.8-3.8H83c2.1,0,3.8,1.7,3.8,3.8v0C86.8,52,85.1,53.7,83,53.7z"/>
+                                <path fill="#dd4343" d="M63.2,86.7H17.3c-2.1,0-3.8-1.7-3.8-3.8v0c0-2.1,1.7-3.8,3.8-3.8h45.9c2.1,0,3.8,1.7,3.8,3.8v0C67,85,65.3,86.7,63.2,86.7z"/>
+                            </svg>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarText">
-                            <ul class="navbar-nav ml-auto">
+                            <ul class="navbar-nav">
                                 <li class="nav-item active">
                                     <a class="nav-link" href="#">Home</a>
                                 </li>
@@ -51,13 +55,13 @@
                         <div class="carousel-item active">
                             <div class="carousel-caption d-block">
                                 <h2>Welcome to my <span>Website</span></h2>
-                                <p>If you Like this website. You really want a website like this? <a herf="#contact">Contact Me</a></p>
+                                <p>If you Like this website. You really want a website like this? <a href="#contact">Contact Me</a></p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="carousel-caption d-block">
                             <h2>My Name is <span>Sachin Suresh</span></h2>
-                            <p>I'm a Frontend Developer</p>
+                            <p>I'm a UI Developer</p>
                             </div>
                         </div>
                     </div>
